--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,26 +1,10 @@
 Package: BreastCancerExplorer
 Title: BreastCancerExplorer
 Version: 0.0.0.9000
-Authors@R: c(person(given = 'Mikkel', 
+Authors@R: person(given = 'Mikkel', 
                     family = 'Swartz', 
                     email = 's174586@student.dtu.dk', 
-                    role = c('cre', 'aut')),
-            person(given = 'Søren', 
-                    family = 'Sandgaard', 
-                    email = 's173686@student.dtu.dk', 
-                    role = 'aut'),
-            person(given = 'Aldis', 
-                    family = 'Björgvinsdóttir', 
-                    email = 's212956@student.dtu.dk', 
-                    role = 'aut'),
-            person(given = 'Lasse', 
-                    family = 'Rene', 
-                    email = 's183448@student.dtu.dk', 
-                    role = 'aut'),
-            person(given = 'Helene', 
-                    family = 'Wegener', 
-                    email = 's165827@student.dtu.dk', 
-                    role = 'aut'))
+                    role = c('cre', 'aut'))
 
 Description: This is an app where you can explore the Real Breast Cancer Dataset
 License: What license is it under?
