Initial setup done

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 myshinyapp.Rcheck/
 myshinyapp*.tar.gz
 myshinyapp*.tgz
+BreastCancerExplorer.Rcheck/
+BreastCancerExplorer*.tar.gz
+BreastCancerExplorer*.tgz
