--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -7,3 +7,6 @@ $run_dev.*
 ^myshinyapp\.Rcheck$
 ^myshinyapp.*\.tar\.gz$
 ^myshinyapp.*\.tgz$
+^BreastCancerExplorer\.Rcheck$
+^BreastCancerExplorer.*\.tar\.gz$
+^BreastCancerExplorer.*\.tgz$
