--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,24 @@
 Package: BreastCancerExplorer
 Title: BreastCancerExplorer
 Version: 0.0.0.9000
-Authors@R: person(given = 'Mikkel', 
-                    family = 'Swartz', 
-                    email = 's174586@student.dtu.dk', 
-                    role = c('cre', 'aut'))
-
-Description: This is an app where you can explore the Real Breast Cancer Dataset
+Authors@R: c(
+    person("Mikkel", "Swartz", , "s174586@student.dtu.dk", role = c("cre", "aut")),
+    person("Søren", "Sandgaard", , "s173686@student.dtu.dk", role = "aut"),
+    person("Aldis", "Björgvinsdóttir", , "s212956@student.dtu.dk", role = "aut"),
+    person("Lasse", "Rene", , "s183448@student.dtu.dk", role = "aut"),
+    person("Helene", "Wegener", , "s165827@student.dtu.dk", role = "aut")
+  )
+Description: This is an app where you can explore the Real Breast Cancer
+    Dataset
 License: What license is it under?
+URL: https://github.com/rforbiodatascience22/group_15_final_project_app
+BugReports: 
+    https://github.com/rforbiodatascience22/group_15_final_project_app/issues
 Imports: 
     config (>= 0.3.1),
     golem (>= 0.3.2),
+    magrittr,
     shiny (>= 1.7.1)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
-URL: https://github.com/rforbiodatascience22/group_15_final_project_app
-BugReports: https://github.com/rforbiodatascience22/group_15_final_project_app/issues
+RoxygenNote: 7.1.2
